--- a/cft_calc/src/main/webapp/content/styles.css
+++ b/cft_calc/src/main/webapp/content/styles.css
@@ -761,4 +761,8 @@ body, .login-submit, .login-submit:before, .login-submit:after {
     margin-right: 20px;
 }
 
+.gridStyle {
+    border: 1px solid rgb(212,212,212);
+}
+
 /*#endregion */
