--- a/cft_calc/src/main/webapp/content/styles.css
+++ b/cft_calc/src/main/webapp/content/styles.css
@@ -576,10 +576,6 @@ body, .login-submit, .login-submit:before, .login-submit:after {
   margin: 0 0 10px;
 }
 
-.new-user {
-    width: 600px !important;    
-}
-
 .login input, button, label {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 15px;
@@ -589,7 +585,7 @@ body, .login-submit, .login-submit:before, .login-submit:after {
   box-sizing: border-box;
 }
 
-.login input[type=text], input[type=email], input[type=password] {
+.login input[type=text], input[type=email], input[type=password], button {
   padding: 0 10px;
   width: 279px;
   height: 40px;
@@ -616,10 +612,6 @@ body, .login-submit, .login-submit:before, .login-submit:after {
   font-weight: 100;
   text-align: right;
   letter-spacing: 1px;
-}
-
-.new-user label {
-  width: 120px !important;
 }
 
 .forgot-password {
