UI minor improvements

--- a/cft_calc/src/main/webapp/app/layout/topnav.html
+++ b/cft_calc/src/main/webapp/app/layout/topnav.html
@@ -1,6 +1,6 @@
 ﻿<nav class="navbar navbar-fixed-top navbar-inverse" ng-controller="topnav as vm">
     <div class="navbar-header">
-        <a href="/" class="navbar-brand"><span class="brand-title">Cross Fit Calculator</span></a>
+        <a href="/" class="navbar-brand"><span class="brand-title">CrossFit benchmarkr</span></a>
         <a class="btn navbar-btn navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
