--- a/cft_calc/src/main/webapp/content/ohad.css
+++ b/cft_calc/src/main/webapp/content/ohad.css
@@ -12,7 +12,8 @@ font-size: 16px;
 border-radius: 5px;
 }
 
-.button.primary, .minibutton.primary {
+.appl-button.signup, 
+.button.primary {
 color: #fff;
 text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
 background-color: #60b044;
