--- a/cft_calc/src/main/webapp/content/styles.css
+++ b/cft_calc/src/main/webapp/content/styles.css
@@ -585,7 +585,7 @@ body, .login-submit, .login-submit:before, .login-submit:after {
   box-sizing: border-box;
 }
 
-.login input[type=text], input[type=email], input[type=password], button {
+.login input[type=text], input[type=email], input[type=password], .appl-button {
   padding: 0 10px;
   width: 279px;
   height: 40px;
