--- a/cft_calc/src/main/webapp/content/customtheme.css
+++ b/cft_calc/src/main/webapp/content/customtheme.css
@@ -996,7 +996,7 @@ form {
         padding: 1.5em 1em;
         background-color: #f8f8f8;
         background: #f8f8f8;
-        border: 1px solid #ccc;
+        border: 0px solid #ccc;		/*ohad fix*/
         max-width: 100%;
         text-align: center;
     }
