--- a/cft_calc/src/main/webapp/content/ohad.css
+++ b/cft_calc/src/main/webapp/content/ohad.css
@@ -23,3 +23,10 @@ background-image: linear-gradient(#8add6d, #60b044);
 background-repeat: repeat-x;
 border-color: #5ca941;
 }
+
+.today-datas .app_link,
+.app_link
+{
+	padding: 0px;
+	height: 93px;	
+}
