--- a/cft_calc/src/main/webapp/content/styles.css
+++ b/cft_calc/src/main/webapp/content/styles.css
@@ -566,7 +566,7 @@ body, .login-submit, .login-submit:before, .login-submit:after {
 .login {
   position: relative;
   margin: 80px auto;
-  width: 450px;
+  width: 1000px;
   padding-right: 32px;
   font-weight: 300;
   color: #a8a7a8;
@@ -604,6 +604,7 @@ body, .login-submit, .login-submit:before, .login-submit:after {
   outline: 0;
 }
 
+
 .login label {
   float: left;
   width: 80px;
@@ -612,6 +613,19 @@ body, .login-submit, .login-submit:before, .login-submit:after {
   font-weight: 100;
   text-align: right;
   letter-spacing: 1px;
+}
+
+
+/** special treatment for signup - all fields of signin are in same row. so we changed it to 1000px. but signup should kept 450px 
+so this is a special behaviour - both classes login+signup */
+.login.signup {
+  position: relative;
+  margin: 80px auto;
+  width: 450px;
+  padding-right: 32px;
+  font-weight: 300;
+  color: #a8a7a8;
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
 }
 
 .forgot-password {
