add facebook link #24

--- a/cft_calc/src/main/webapp/app/layout/topnav.html
+++ b/cft_calc/src/main/webapp/app/layout/topnav.html
@@ -7,6 +7,9 @@
             <span class="icon-bar"></span>
         </a>
     </div>
+    <div class="navbar-header navbar-nav">
+	    <a href="https://www.facebook.com/cbenchmarkr"><img class="top_nav_link" src="../../content/images/Facebook_Icon_2.png" alt="Facebook page"></a>
+    </div>
     <div class="navbar-collapse collapse">
         <div class="pull-right navbar-logo">
             <ul class="nav navbar-nav pull-right logged-in-user">
