when using mobile, user cannot "add workout" #51

--- a/cft_calc/src/main/webapp/app/layout/topnav.html
+++ b/cft_calc/src/main/webapp/app/layout/topnav.html
@@ -1,4 +1,4 @@
-﻿<nav class="navbar navbar-fixed-top navbar-inverse" ng-controller="topnav as vm">
+<nav class="navbar navbar-fixed-top navbar-inverse" ng-controller="topnav as vm">
     <div class="navbar-header">
         <a href="/" class="navbar-brand"><span class="brand-title">CrossFit benchmarkr</span></a>
         <a class="btn navbar-btn navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
         </a>
     </div>
-    <div class="navbar-header navbar-nav">
+    <div class="navbar-header navbar-nav navbar-collapse collapse">
 	    <a href="https://www.facebook.com/cbenchmarkr"><img class="top_nav_link" src="../../content/images/Facebook_Icon_2.png" alt="Facebook page"></a>
     </div>
     <div class="navbar-collapse collapse">
