--- a/cft_calc/src/main/webapp/content/ohad.css
+++ b/cft_calc/src/main/webapp/content/ohad.css
@@ -41,3 +41,9 @@ border-color: #5ca941;
 {
 	margin: 5px;
 }
+
+/*override bootstrap definition, that align 'th' to the left*/ 
+th
+{
+	text-align: center;
+}
