--- a/cft_calc/src/main/webapp/content/customtheme.css
+++ b/cft_calc/src/main/webapp/content/customtheme.css
@@ -282,6 +282,12 @@ a.btn {
     border: 0 !important;
 }
 
+.bgray {
+    background: #888888 !important;
+    color: #fff !important;
+    border: 0 !important;
+}
+
 .bviolet {
     background: #932ab6 !important;
     color: #fff !important;
@@ -946,6 +952,12 @@ form {
     .widget.wviolet .widget-head {
         background-color: #932ab6;
         border: 1px solid #932ab6;
+        color: #fff;
+    }
+
+    .widget.wgray .widget-head {
+        background-color: #888888;
+        border: 1px solid #888888;
         color: #fff;
     }
 
