--- a/cft_calc/src/main/webapp/content/ohad.css
+++ b/cft_calc/src/main/webapp/content/ohad.css
@@ -47,3 +47,16 @@ th
 {
 	text-align: center;
 }
+
+.app-description
+{
+	text-align: center;
+	font-size: 30px;
+	line-height: 1.5;	
+}
+
+h3
+{
+	text-align: center;
+	font-size: 30px;
+}
