--- a/cft_calc/src/main/webapp/content/styles.css
+++ b/cft_calc/src/main/webapp/content/styles.css
@@ -780,4 +780,10 @@ input[type=date] {
     border: 1px solid rgb(212,212,212);
 }
 
-/*#endregion */
+/* special behavior for the 'donate' button: no border and 2px (instead of 4) padding */
+#donate_button
+{
+	border: none !important;
+	padding: 2px !important;
+	padding-left: 5px !important;	
+}
