--- a/cft_calc/src/main/webapp/content/styles.css
+++ b/cft_calc/src/main/webapp/content/styles.css
@@ -621,12 +621,14 @@ body, .login-submit, .login-submit:before, .login-submit:after {
 so this is a special behaviour - both classes login+signup */
 .login.signup {
   position: relative;
-  margin: 80px auto;
+  margin: 40px auto;
   width: 450px;
   padding-right: 32px;
   font-weight: 300;
-  color: #a8a7a8;
+
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
+  color: inherit;
+  background-color: #f5f5f5;
 }
 
 .forgot-password {
